--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/elements": "^7.2.10",
     "@angular/fire": "^5.1.2",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@swimlane/ngx-charts": "^10.1.0",
+    "@webcomponents/custom-elements": "^1.2.2",
     "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
     "firebase": "^5.9.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
